[package]
name = "download-extract-progress"
repository="https://github.com/sshcrack/download-extract-progress"
description = "A Rust library for downloading and extracting files with progress tracking."
license = "MIT"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
futures-core = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
log = "0.4.27"
reqwest = { version = "0.12.18", features = ["json", "stream"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
sevenz-rust = { version = "0.6.1", optional = true }
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["fs", "io-util", "macros"] }
uuid = "1.17.0"
zip = { version = "4.0.0", optional = true }

[features]
7z = ["dep:sevenz-rust"]
zip = ["dep:zip"]
